--- a/public/css/style.less
+++ b/public/css/style.less
@@ -24,6 +24,11 @@ ul li hr {
 	margin : 5px 15px;
 }
 
+span.smll-block {
+	margin-right : 5px;
+	font-size : 13px;
+}
+
 a {
   color: @large-link;
 }
