--- a/views/about.jade
+++ b/views/about.jade
@@ -2,22 +2,44 @@ extends layout
 block content
 
 	#content-main
-		h4 "CLAN's mission is to provide environment for 2nd language learning"
+		h1 Improve your 2nd language in your daily life
+		
+		p.
 
-		table
-			tr
-				td
-					img.img-polaroid(src="/img/empty.jpg", style="width:320px; height:240px;")
-				td(style="vertical: top;")
-					h5 CLAN say "Hello" when you come in 
-					p blar asdfasdlkfjalskdjfalksjfalkjdfklasjdfklajsdfkljaaklajfd aslkdfjalskdjfalkjdfaf
+			Our mission is provide you environment to learn
+			new language from daily life.
+
+		p.
+
+			Imagine that when you enter the restoom, some one
+			said "Don't forget to brush teeth". 
+
+		p.
+
+			Imagine that you heard this sentence every day of your life
+			You may remeber this sentence. 
+
+		p.
+			This is Smart Micro Language Learning.
+
 		
-		
-		
-		h5 CLAN say "It's rain" when it's rain outside 
-		
-		
-		h5 CLAN say differently everyday 
+		h2 Context-awareness
+
+		p.
+
+			The sentence from SMLL is memorable because it is selected based
+			on the context that you are.
+
+		h2 You may need this
+		p.
+			If you really need this, see how it works page.
+
+		p
+			a.pull-right(href="/how-it-works") Next : How it works >>
+					
 
 	#content-sidebar
 		include side/about
+
+
+	.clearfix
