--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,10 @@
 extends layout
 block content
 
-	h1 Smart Micro Language Learning 
-	hr
-	p Built at Twitter by @mdo and @fat, Bootstrap utilizes LESS CSS, is compiled via Node, and is managed through GitHub to help nerds do awesome stuff on the ...	
+	h1 SMLL
+	h5 Build your own 2nd language environment 
 	p
-		a.btn.btn-primary(href="/how-it-works") How it works
+		a.btn.btn-primary.btn-large(href="/how-it-works") How it works
 
 	hr
 
