--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype 5
 html
 	head
-		title smll 0.1.0 
+		title SMLL - Forever for Everyone
 		meta(charset="UTF-8")
 		link(rel="stylesheet", href="/bootstrap/css/bootstrap.min.css")
 		link(rel="stylesheet", href="/css/style.css")
@@ -48,7 +48,7 @@ html
 		header
 			.navbar.navbar-inverse
 				.navbar-inner
-					a.brand(href="/") CLAN
+					a.brand(href="/") SMLL
 					ul.nav(role="navigation")
 						- if ( user ) 
 							li
