--- a/views/user/new.jade
+++ b/views/user/new.jade
@@ -8,15 +8,11 @@ block content
 		form(action="/user", method="POST")
 			fieldset
 
-				label E-mail	
-				input(type="text", name="email", placeholder="E-mail")
-				span.help-block You will receive confirm mail	
-
-				label	Password 
-				input(type="password", name="password")
-				
-				label Name 
-				input(type="text", name="name", placeholder="Your name")
+				input(type="text", name="email", placeholder="Your E-mail")
+				br
+				input(type="password", name="password", placeholder="New password")				
+				br
+				input(type="text", name="name", placeholder="Your Name")
 
 				hr
 
