--- a/views/user/index.jade
+++ b/views/user/index.jade
@@ -23,7 +23,7 @@ block content
 						.clearfix
 
 					.mid.pull-left
-						img.img50(src="/img/connect.jpg")
+						img(src="/img/arrow.png")
 
 					.box.pull-left
 						.left
